examples/rules.v4
# Generated by iptables-save v1.6.0 on Sat Jan  6 13:45:52 2018
*nat
:PREROUTING ACCEPT [1:576]
:INPUT ACCEPT [1:576]
:OUTPUT ACCEPT [59:4892]
:POSTROUTING ACCEPT [59:4892]
COMMIT
# Completed on Sat Jan  6 13:45:52 2018
# Generated by iptables-save v1.6.0 on Sat Jan  6 13:45:52 2018
*mangle
:PREROUTING ACCEPT [559:69428]
:INPUT ACCEPT [559:69428]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [561:44902]
:POSTROUTING ACCEPT [612:52410]
COMMIT
# Completed on Sat Jan  6 13:45:52 2018
# Generated by iptables-save v1.6.0 on Sat Jan  6 13:45:52 2018
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14:1064]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 137 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 138 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 139 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 445 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9000 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 6600 -m state --state NEW -j ACCEPT
COMMIT
# Completed on Sat Jan  6 13:45:53 2018
